Change to maven-multi-module project